syntax = "proto3";

import "vo.proto";

enum Range {
    Events = 0;
    PROJECTS = 1;
    DATASETS = 2;
    PROJECT_DATASETS =3;
    JOBS =4;
    STATS=5;
    ASSET_CACHE= 6;
    EXPERTS=7;


    VERSION=255;

}


message ProjectData {
    string name = 1;
    string id = 2;
    int32 dataset_count = 3;
    int64 storage_bytes = 4;
    int32 job_count = 5;
    string description = 6;
}

message Expert {
    string expert_id = 1;
    string expert_name = 2;
}

message DatasetData {
    string dataset_id = 1;
    string name = 2;
    string project_id = 3;

    int64 record_count = 4;
    int64 file_count = 5;

    int64 storage_bytes = 6;
    DatasetSample sample = 7;
    int64 update_timestamp = 8;
    string data_format = 9;
    string description = 10;


    string location_id = 11;

    string location_uri = 12;



    repeated string experts = 13;


    repeated string upstream_jobs = 14;
    repeated string downstream_jobs = 15;


}





message Job{
    string job_id = 1;
    string job_name = 2;
    string project_id = 3;

    repeated string inputs = 4;
    repeated string outputs = 5;

    repeated Expert experts = 6;
}





message TenantStats{
    int32 project_count = 1;
    int32 dataset_count = 2;
    int32 job_count = 3;
    int32 report_count = 4;
    int32 expert_count = 5;
    int32 model_count = 6;
}


message AssetCache{
    bytes digest = 1;
    bytes body = 2;
}





message FieldSchema {
    string name = 1;
    string type = 2;
}

message DatasetDescriptor {
    string type = 1;
    int64 record_count = 2;
    repeated FieldSchema schema = 3;
    string sample_string = 4;
}


message AppVersionData {
    string ProjectionVersion = 1;
}